Only the first child div having the class "avalona-inner-frame" becomes the "rotated layer"

--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
 <body>
 
 <div id="frame-3d"> <!-- Mouse event layer -->
-    <div> <!-- 3d layer changing orientation -->
+    <div>Before frame</div>
+    <div class="avalona-inner-frame"> <!-- 3d layer changing orientation -->
         <div id="half-circle" data-avalonA-deepness="-300"></div>
         <div id="rectangle" data-avalonA-deepness="50">
             <div id="square" data-avalonA-deepness="75">
                 <div id="inner-square" data-avalonA-deepness="150">
-                    <a data-avalonA-deepness="75" href="http://www.amazon.com">a.com</a>
+                    <a data-avalonA-deepness="35" href="http://www.amazon.com">a.com</a>
                 </div>
             </div>
             <div id="circle" data-avalonA-deepness="200"></div>
@@ -45,6 +46,7 @@
             </div>
         </div>
     </div>
+    <div>After frame</div>
 </div>
 
 </body>
