- Fixed issue #1 : div.avalona-inner-frame shouldn't be forced to 100% - Fixed issue #2 : Orient all descendants div.avalona-inner-frame

--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
             </div>
         </div>
     </div>
-    <div>After frame</div>
+    <div class="avalona-inner-frame">After frame
+        Nam pharetra risus vel metus commodo in hendrerit tortor facilisis. Duis ultrices dictum sapien a posuere. Sed nisi felis, faucibus et semper eget, aliquam sit amet arcu. Aliquam pulvinar vulputate erat ut tempor. Sed at tellus neque. Donec sed adipiscing tortor. Suspendisse potenti. Sed quis molestie libero.
+
+        Suspendisse adipiscing, odio non euismod venenatis, mauris lectus porttitor lorem, vel fringilla est odio nec purus. Aenean elementum, nisl at euismod interdum, elit erat hendrerit lorem, et pharetra purus justo at felis. Integer blandit felis orci, ut luctus justo. Nullam et libero quis est egestas elementum. Pellentesque elit mauris, fermentum sit amet sagittis quis, ullamcorper ut dolor. Phasellus commodo vestibulum tortor quis dignissim. Suspendisse et erat vel dolor sagittis sodales. Fusce convallis tempus feugiat. Donec dolor nibh, vulputate non ultrices eu, aliquam sit amet ante. Nullam id tortor est, a faucibus sem. Phasellus fermentum aliquam erat non consequat. Aliquam porttitor odio convallis nulla lobortis malesuada ornare augue laoreet. Nullam eget ipsum eu quam pulvinar auctor non in purus.
+    </div>
 </div>
 
 </body>
