Updated dist folder

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
 </head>
 
-<body>
+<body id="body-3d"> <!-- Mouse event layer -->
 
-<div id="frame-3d"> <!-- Mouse event layer -->
+<div id="frame-3d">
     <div>Before frame</div>
     <div>
         Frame wrapper
