Added a refresh method to update All or targeted layer (divs from the transformed frame having attribute 'data-avalonA-deepness')

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 
 <body id="body-3d"> <!-- Mouse event layer -->
 
+<button id="shuffle-all">Shuffle all</button>
+<button id="shuffle-one">Shuffle one</button>
+
 <div id="frame-3d">
     <div>Before frame</div>
     <div>
