Allow aliasing of avalon-inner-layer class and deepness attribute

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body data-outter="body-3d"> <!-- Mouse event layer -->
+<body data-outter="body-3d" data-avalonA-class="aa3d" data-avalonA-deepness-attr="aaz"> <!-- Mouse event layer -->
 
 <button id="start">Start</button>
 <button id="shuffle-all">Shuffle all</button>
@@ -31,14 +31,14 @@
     <div>
         Frame wrapper
         <div data-inner="yes"> <!-- 3d layer changing orientation -->
-            <div id="half-circle" data-avalonA-deepness="-300"></div>
-            <div id="rectangle" data-avalonA-deepness="50">
-                <div id="square" data-avalonA-deepness="75">
-                    <div id="inner-square" data-avalonA-deepness="150">
-                        <a data-avalonA-deepness="35" href="http://www.amazon.com">a.com</a>
+            <div id="half-circle" data-aaz="-300"></div>
+            <div id="rectangle" data-aaz="50">
+                <div id="square" data-aaz="75">
+                    <div id="inner-square" data-aaz="150">
+                        <a data-aaz="35" href="http://www.amazon.com">a.com</a>
                     </div>
                 </div>
-                <div id="circle" data-avalonA-deepness="200"></div>
+                <div id="circle" data-aaz="200"></div>
                 <div id="text">
                     Lorem ipsum dolor sit amet, consectetur <a href="http://www.amazon.com">adipiscing</a> elit. Ut aliquet <a href="#to">cursus</a> enim, et varius nibh dictum non. Ut tincidunt augue in urna vestibulum at venenatis metus cursus. Phasellus porta tortor sit amet elit elementum id faucibus purus facilisis. Mauris pharetra consequat mi, non mattis ligula feugiat eget. Vivamus consectetur orci ac mauris dignissim egestas. Aliquam erat volutpat. Sed imperdiet, lorem eget feugiat laoreet, enim diam pulvinar est, at sodales nulla metus at nisi. Etiam at hendrerit ligula. Sed eget est posuere tellus accumsan tempor sed rhoncus ipsum. Sed augue tortor, laoreet ac congue id, sagittis at nunc. Fusce a magna convallis lorem euismod porttitor sit amet vitae magna. Nulla lacus purus, volutpat sed rutrum non, tempor in tellus. Cras vel mi ac augue eleifend bibendum.
 
