options object for AvalonA to specify class and deepness attribute instead of fetching if from dom

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body data-outter="body-3d" data-avalonA-class="aa3d" data-avalonA-deepness-attr="aaz"> <!-- Mouse event layer -->
+<body data-outter="body-3d"> <!-- Mouse event layer -->
 
 <button id="start">Start</button>
 <button id="shuffle-all">Shuffle all</button>
