Improved the way 3d layers are updated: indeed, 'preserve-3d' get automatically applied to both layer and immediate parent

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div id="rectangle" data-aaz="50">
                 <div id="square" data-aaz="75">
                     <div id="inner-square" data-aaz="150">
-                        <a data-aaz="35" href="http://www.amazon.com">a.com</a>
+                        <a data-aaz="35" href="http://www.amazon.com" style="display: block;">a.com</a>
                     </div>
                 </div>
                 <div id="circle" data-aaz="200"></div>
