--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <div data-inner="yes"> <!-- 3d layer changing orientation -->
             <div id="half-circle" data-aaz="-300"></div>
             <div id="rectangle" data-aaz="50">
-                <div id="square" data-aaz="75">
-                    <div id="inner-square" data-aaz="150">
+                <div id="square">
+                    <div id="inner-square">
                         <a data-aaz="35" href="http://www.amazon.com" style="display: block;">a.com</a>
                     </div>
                 </div>
