Created an animation library for AvalonA

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- @javascript zepto.min CSSPlugin.min TweenMax.min -->
 
     <!-- @javascript AvalonA -->
+    <!-- @javascript AvalonAnimation -->
     <!-- @javascript app -->
 
     <link href="<!-- @path favicon.ico -->" rel="shortcut icon">
