Added "Spotlight" animation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- @reload -->
     <!-- @stylesheet normalize style -->
 
-    <!-- @javascript zepto.min CSSPlugin.min TweenMax.min -->
+    <!-- @javascript zepto.min CSSPlugin.min TweenMax.min TimelineMax.min -->
 
     <!-- @javascript AvalonA -->
     <!-- @javascript AvalonAnimation -->
