- Added enable / disable features

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
 <body data-outter="body-3d"> <!-- Mouse event layer -->
 
-<button id="start">Start</button>
+<button id="enable">Enable</button>
+<button id="disable">Disable</button>
 <button id="shuffle-all">Shuffle all</button>
 <button id="shuffle-one">Shuffle one</button>
 
