- Updated doc - Updated src

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div>Before frame</div>
     <div>
         Frame wrapper
-        <div data-inner="yes"> <!-- 3d layer changing orientation -->
+        <div data-inner="aa3d"> <!-- 3d layer changing orientation -->
             <div id="half-circle" data-aaz="-300"></div>
             <div id="rectangle" data-aaz="50">
                 <div data-aaz="40">
@@ -67,7 +67,7 @@
     </div>
 </div>
 
-<div class="a3d2">
+<div id="a3d2">
     <div data-aaz="100">
         <div data-aaz="50">
             <button id="enable2">Enable</button>
