- Made sure that AvalonA.disable() reset "transformed layer" rotation even when node is hidden - Updated binaries

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
 <button id="enable">Enable</button>
 <button id="disable">Disable</button>
+<button id="hide">Hide</button>
+<button id="show">Show</button>
 <button id="shuffle-all">Shuffle all</button>
 <button id="shuffle-one">Shuffle one</button>
 
