Fixed SpeedTesrter unit test

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <!-- @javascript SpeedTester -->
 
 <script>
-    var speedTester = new SpeedTester('<!-- @path speed-benchmark -->').run();
+    var speedTester = new SpeedTester('<!-- @path speed-benchmark.js -->').run();
 </script>
 
 <!-- @javascript zepto.min CSSPlugin.min TweenMax.min BezierPlugin.min -->
