Made Avalon(A) AMD compliant

--- a/index.html
+++ b/index.html
@@ -75,10 +75,11 @@
 <!-- @javascript SpeedTester -->
 
 <script>
+	//window.GreenSockGlobals = {};
     var speedTester = new SpeedTester('<!-- @path speed-benchmark.js -->').run();
 </script>
 
-<!-- @javascript zepto.min CSSPlugin.min TweenMax.min BezierPlugin.min -->
+<!-- @javascript zepto.min TweenMax.min -->
 
 <!-- @javascript AvalonA -->
 <!-- @javascript AvalonAnimation -->
