Used "requestAnimationFrame" for speed tester

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <script>
 	//window.GreenSockGlobals = {};
-    var speedTester = new SpeedTester('<!-- @path speed-benchmark.js -->').run();
+    var speedTester = (new SpeedTester).run();
 </script>
 
 <!-- @javascript zepto.min TweenMax.min -->
