Triggering SpeedTester complete event right away if "requestAnimation" is not supported, passing {fps: 0} as a result to the listener

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 
 <script>
 	//window.GreenSockGlobals = {};
+	//window.requestAnimationFrame = window.webkitRequestAnimationFrame = window.mozRequestAnimationFrame = window.oRequestAnimationFrame = undefined;
     var speedTester = new SpeedTester(3).run();
 </script>
 
