It is now possible to change x, y and z rotation as well as deepness

--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
     <div>
         Frame wrapper
         <div data-inner="aa3d"> <!-- 3d layer changing orientation -->
-            <div id="half-circle" data-aaz="-300"></div>
-            <div id="rectangle" data-aaz="50">
-                <div data-aaz="40">
+            <div id="half-circle" data-at="-300,45.5,90,45"></div>
+            <div id="rectangle" data-at="50, 20.32, 5, -10.2">
+                <div data-at="40">
                     <button id="enable3">Enable</button>
                     <button id="disable3">Disable</button>
                 </div>
-                <div id="square" data-aaz="1">
-                    <div id="inner-square" data-aaz="1">
-                        <a data-aaz="35" href="http://www.amazon.com" style="display: block;">a.com</a>
+                <div id="square" data-at="1, 0, -45, +60">
+                    <div id="inner-square" data-at="1,45">
+                        <a data-at="35" href="http://www.amazon.com" style="display: block;">a.com</a>
                     </div>
                 </div>
-                <div id="circle" data-aaz="200"></div>
+                <div id="circle" data-at="200, -50"></div>
                 <div id="text">
                     Lorem ipsum dolor sit amet, consectetur <a href="http://www.amazon.com">adipiscing</a> elit. Ut aliquet <a href="#to">cursus</a> enim, et varius nibh dictum non. Ut tincidunt augue in urna vestibulum at venenatis metus cursus. Phasellus porta tortor sit amet elit elementum id faucibus purus facilisis. Mauris pharetra consequat mi, non mattis ligula feugiat eget. Vivamus consectetur orci ac mauris dignissim egestas. Aliquam erat volutpat. Sed imperdiet, lorem eget feugiat laoreet, enim diam pulvinar est, at sodales nulla metus at nisi. Etiam at hendrerit ligula. Sed eget est posuere tellus accumsan tempor sed rhoncus ipsum. Sed augue tortor, laoreet ac congue id, sagittis at nunc. Fusce a magna convallis lorem euismod porttitor sit amet vitae magna. Nulla lacus purus, volutpat sed rutrum non, tempor in tellus. Cras vel mi ac augue eleifend bibendum.
 
@@ -63,8 +63,8 @@
 </div>
 
 <div id="a3d2">
-    <div data-aaz="100">
-        <div data-aaz="50">
+    <div data-at="100">
+        <div data-at="50">
             <button id="enable2">Enable</button>
             <button id="disable2">Disable</button>
         </div>
