• Updated binaries • Updated doc

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <button id="disable3">Disable</button>
                 </div>
                 <div id="square" at="z:1; ry:-45; rz:+60">
-                    <div id="inner-square" at="z:1;rz:45">
+                    <div id="inner-square" at="ry:45">
                         <a at="z:35" href="http://www.amazon.com" style="display: block;">a.com</a>
                     </div>
                 </div>
