--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         Frame wrapper
         <div data-inner="aa3d" id="aa3d"  > <!-- 3d layer changing orientation -->
             <div class="gravity">
-                <div id="half-circle" at="z:-42; rx:104; ry:316; rz:35"  ></div>
+                <div class="gravity">
+                    <div id="half-circle" at="z:-42; rx:104; ry:316; rz:35"  ></div>
+                </div>
                 <div id="rectangle" at="z:30; rx:194; ry:42; rz:288"  >
                     <div at="z:-61; rx:105; ry:232; rz:287"  >
                         <button id="enable3" >Enable</button>
@@ -39,8 +41,10 @@
                     
                     <div class="gravity">
                         <div id="square" at="z:-189; rx:259; ry:302; rz:341"  >
-                            <div id="inner-square" at="z:144; rx:230; ry:332; rz:359"  >
-                                <a at="z:122; rx:7; ry:211; rz:245" href="http://www.amazon.com"  >a.com</a>
+                            <div class="gravity">
+                                <div id="inner-square" at="z:144; rx:230; ry:332; rz:359"  >
+                                    <a at="z:122; rx:7; ry:211; rz:245" href="http://www.amazon.com"  >a.com</a>
+                                </div>
                             </div>
                         </div>
                     </div>
