Removed jquery / zepto dependency

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     var speedTester = new SpeedTester(3).run();
 </script>
 
-<!-- @javascript zepto.min TweenMax.min -->
+<!-- @javascript TweenMax.min -->
 
 <!-- @javascript AvalonA -->
 <!-- @javascript AvalonAnimation -->
