--- a/index.html
+++ b/index.html
@@ -115,12 +115,15 @@
             <h2>
                 <a id="-html" class="anchor" href="#-html" aria-hidden="true"><span class="octicon octicon-link"></span></a>
                 <a name="html"></a>Html</h2>
-            <pre>
-                <code>&lt;div id="frame-3d"&gt; &lt;!-- 3d Frame --&gt; &lt;div id="avalona-inner-frame"&gt; &lt;!-- transformed layer --&gt;
-                    &lt;div id="half-circle" data-avalonA-transform="z:-300"&gt;&lt;/div&gt; &lt;div id="square" data-avalonA-transform="z:75;
-                    rx:20.32; ry:5; rz:-10.2"&gt; &lt;div id="inner-square" data-avalonA-transform="z:150"&gt;&lt;/div&gt; &lt;/div&gt; &lt;div
-                    id="circle" data-avalonA-transform="z:200;rx:45"&gt;&lt;/div&gt; &lt;/div&gt; &lt;/div&gt;</code>
-            </pre>
+            <pre><code>&lt;div id="frame-3d"&gt; &lt;!-- 3d Frame --&gt;
+    &lt;div id="avalona-inner-frame"&gt; &lt;!-- transformed layer --&gt;
+        &lt;div id="half-circle" data-avalonA-transform="z:-300"&gt;&lt;/div&gt;
+            &lt;div id="square" data-avalonA-transform="z:75; rx:20.32; ry:5; rz:-10.2"&gt;
+                &lt;div id="inner-square" data-avalonA-transform="z:150"&gt;&lt;/div&gt;
+            &lt;/div&gt;
+        &lt;div id="circle" data-avalonA-transform="z:200;rx:45"&gt;&lt;/div&gt;
+    &lt;/div&gt;
+&lt;/div&gt;</code></pre>
             <p>It is mandatory to have at least the
                 <code>3d Frame</code>and
                 <code>transformed layer</code>defined when
@@ -137,9 +140,9 @@
             <h2>
                 <a id="-script" class="anchor" href="#-script" aria-hidden="true"><span class="octicon octicon-link"></span></a>
                 <a name="script"></a>Script</h2>
-            <pre>
-                <code>$(function(){ AvalonA('frame-3d', 'avalona-inner-frame').start(); });</code>
-            </pre>
+            <pre><code>$(function(){
+    AvalonA('frame-3d', 'avalona-inner-frame').start();
+});</code></pre>
             <h1>
                 <a id="-api" class="anchor" href="#-api" aria-hidden="true"><span class="octicon octicon-link"></span></a>
                 <a name="api"></a>API</h1>
@@ -148,9 +151,9 @@
                 <a name="constructorOptions"></a>Constructor options</h2>
             <p>It is possible to pass an object along with the id of the
                 <code>3d Frame</code>to set options:</p>
-            <pre>
-                <code>$(function(){ AvalonA('frame-3d', 'avalona-inner-frame', {option: value}).start(); });</code>
-            </pre>
+            <pre><code>$(function(){
+    AvalonA('frame-3d', 'avalona-inner-frame', {option: value}).start();
+});</code></pre>
             <h5>
                 <a id="tattr" class="anchor" href="#tattr" aria-hidden="true"><span class="octicon octicon-link"></span></a>
                 <em>tAttr</em>
@@ -164,9 +167,9 @@
             </h5>
             <p>A function that affects the amount of rotation triggered by the mouse movements on the
                 <strong>y axis</strong>.</p>
-            <pre>
-                <code>AvalonA('frame-3d', 'avalona-inner-frame', {fy: function(rotation){ return rotation * 2; } }).start();</code>
-            </pre>
+            <pre><code>AvalonA('frame-3d', 'avalona-inner-frame', {fy: function(rotation){
+    return rotation * 2;
+} }).start();</code></pre>
             <p>Default function as no effect on the rotation value.</p>
             <h5>
                 <a id="fx" class="anchor" href="#fx" aria-hidden="true"><span class="octicon octicon-link"></span></a>
@@ -180,10 +183,18 @@
             </h5>
             <p>When available, restrict mouse movements tracking to this area: moving outside the area reset the
                 <code>transformed layer</code>rotation.</p>
-            <pre>
-                <code>var options = { activeArea: { position: { x: 'auto', y: '15%' }, attachment: 'scroll', width: '150px', height: 100 } };
-                    AvalonA('frame-3d', 'avalona-inner-frame', options).start();</code>
-            </pre>
+            <pre><code>var options = {
+    activeArea: {
+        position: {
+            x: 'auto',
+            y: '15%'
+        },
+        attachment: 'scroll',
+        width: '150px',
+        height: 100
+    }
+};
+AvalonA('frame-3d', 'avalona-inner-frame', options).start();</code></pre>
             <p>Enable the
                 <code>debug</code>option to display the area
                 <em>( for development purpose only )</em>.</p>
@@ -279,10 +290,16 @@
                     <code>activeArea</code>is provided</em>. The animation plays as well when the mouse is iddle.</p>
             <p>The
                 <code>animation</code>object must have the following api:</p>
-            <pre>
-                <code>animation: { play: function(transformedLayer){ // animation code goes here }, pause: function(){ // pause code goes here
-                    } }</code>
-            </pre>
+            <pre><code>animation: {
+
+    play: function(transformedLayer){
+        // animation code goes here
+    },
+
+    pause: function(){
+        // pause code goes here
+    }
+}</code></pre>
             <p>As the example shows, the
                 <code>play()</code>method received as first argument the
                 <code>transformed layer</code>, thus one can animate any attribute of this element
@@ -358,13 +375,16 @@
                 <a id="-events" class="anchor" href="#-events" aria-hidden="true"><span class="octicon octicon-link"></span></a>
                 <a name="events"></a>Events</h2>
             <p>It is possible to add event listeners like this</p>
-            <pre>
-                <code>var options = { on: { event: function(){ /* event code goes here */ }, } }; AvalonA('frame-3d', 'avalona-inner-frame', options).start();</code>
-            </pre>
+            <pre><code>var options = {
+    on: {
+        event: function(){ /* event code goes here */ },
+    }
+};
+AvalonA('frame-3d', 'avalona-inner-frame', options).start();</code></pre>
             <p>or this</p>
-            <pre>
-                <code>var a = AvalonA('frame-3d', 'avalona-inner-frame', options); a.onevent = function(){ /* event code goes here */ }; a.start();</code>
-            </pre>
+            <pre><code>var a = AvalonA('frame-3d', 'avalona-inner-frame', options);
+a.onevent = function(){ /* event code goes here */ };
+a.start();</code></pre>
             <p>Available events:</p>
             <h5>
                 <a id="startrotation" class="anchor" href="#startrotation" aria-hidden="true"><span class="octicon octicon-link"></span></a>
@@ -411,15 +431,23 @@
             <p>
                 <em>Example 1</em>
             </p>
-            <pre>
-                <code>animation: AvalonAnimation.Balance()</code>
-            </pre>
+            <pre><code>animation: AvalonAnimation.Balance()</code></pre>
             <p>
                 <em>Example 2</em>
             </p>
-            <pre>
-                <code>animation: AvalonAnimation.Balance({ duration: 0.75, from:{ rx: 30, ry: -30 }, to:{ rx: -90, ry: 30 } })</code>
-            </pre>
+            <pre><code>animation: AvalonAnimation.Balance({
+  duration: 0.75,
+
+  from:{
+    rx: 30,
+    ry: -30
+  },
+
+  to:{
+    rx: -90,
+    ry: 30
+  }
+})</code></pre>
             <h6>
                 <a id="options" class="anchor" href="#options" aria-hidden="true"><span class="octicon octicon-link"></span></a>
                 <em>Options</em>
@@ -476,15 +504,15 @@
             <p>
                 <em>Example 1</em>
             </p>
-            <pre>
-                <code>animation: AvalonAnimation.Spotlight()</code>
-            </pre>
+            <pre><code>animation: AvalonAnimation.Spotlight()</code></pre>
             <p>
                 <em>Example 2</em>
             </p>
-            <pre>
-                <code>animation: AvalonAnimation.Spotlight({ duration: 5, direction: 'ccw', angle: 10 })</code>
-            </pre>
+            <pre><code>animation: AvalonAnimation.Spotlight({
+  duration: 5,
+  direction: 'ccw',
+  angle: 10
+})</code></pre>
             <h6>
                 <a id="options-1" class="anchor" href="#options-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>
                 <em>Options</em>
@@ -521,17 +549,20 @@
             <p>
                 <em>Main html document – preferably before loading any other scripts</em>
             </p>
-            <pre>
-                <code>&lt;script&gt; var speedTester = new SpeedTester(&lt; how many times the test must be run (default 1) &gt;); speedTester.run();
-                    &lt;/script&gt;</code>
-            </pre>
+            <pre><code>&lt;script&gt;
+    var speedTester = new SpeedTester(&lt; how many times the test must be run (default 1) &gt;);
+    speedTester.run();
+&lt;/script&gt;</code></pre>
             <p>
                 <em>Main script – after document as been loaded</em>
             </p>
-            <pre>
-                <code>speedTester.oncomplete(function(results){ if(results.fps &gt; 30){ AvalonA('frame-3d', 'avalona-inner-frame').start(); }else{
-                    console.warn('Your frame rate is too low, recommended: 30'); } });</code>
-            </pre>
+            <pre><code>speedTester.oncomplete(function(results){
+    if(results.fps &gt; 30){
+        AvalonA('frame-3d', 'avalona-inner-frame').start();
+    }else{
+        console.warn('Your frame rate is too low, recommended: 30');
+    }
+});</code></pre>
             <h1>
                 <a id="-browser-compatibility" class="anchor" href="#-browser-compatibility" aria-hidden="true"><span class="octicon octicon-link"></span></a>
                 <a name="browserCompatibility"></a>Browser compatibility</h1>
