--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section class="main-content">
 <p><em>version: 0.10.2</em></p>
 
-<p><strong>Avalon(A)</strong> allows you to easily add 3d to a set of html elements to simulate a deepness effect <em>(<a href="http://jsfiddle.net/K3kPx/5/show">see jsFiddle preview</a>)</em>. To make this 3d effect noticeable, all html elements pertaining to the <code>transformed layer</code> <em>(basically the root container to which the 3d effect get applied to)</em> - rotate on their x and y axis according to mouse movements.</p>
+<p><strong>Avalon(A)</strong> allows you to easily add 3d to a set of html elements to simulate a deepness effect. To make this 3d effect noticeable, all html elements pertaining to the <code>transformed layer</code> <em>(basically the root container to which the 3d effect get applied to)</em> - rotate on their x and y axis according to mouse movements.</p>
 
 <h1>
 <a id="summary" class="anchor" href="#summary" aria-hidden="true"><span class="octicon octicon-link"></span></a>Summary</h1>
@@ -72,7 +72,6 @@
 <li><a href="#speedTesterUtility">SpeedTester utility</a></li>
 <li><a href="#browserCompatibility">Browser compatibility</a></li>
 <li><a href="#usingRequireJS">Using it with require.js</a></li>
-<li><a href="#preview">Preview</a></li>
 </ul>
 
 <h1>
@@ -130,13 +129,13 @@
 </code></pre>
 
 <h5>
-<a id="tattr" class="anchor" href="#tattr" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>tAttr</em>
+<a id="tattr" class="anchor" href="#tattr" aria-hidden="true"><span class="octicon octicon-link"></span></a>tAttr
 </h5>
 
 <p>Changes the name of the attribute used to define layer <strong>z translation</strong>. Default value is <code>data-avalonA-transform</code>.</p>
 
 <h5>
-<a id="fy" class="anchor" href="#fy" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>fy</em>
+<a id="fy" class="anchor" href="#fy" aria-hidden="true"><span class="octicon octicon-link"></span></a>fy
 </h5>
 
 <p>A function that affects the amount of rotation triggered by the mouse movements on the <strong>y axis</strong>.</p>
@@ -149,13 +148,13 @@
 <p>Default function as no effect on the rotation value.</p>
 
 <h5>
-<a id="fx" class="anchor" href="#fx" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>fx</em>
+<a id="fx" class="anchor" href="#fx" aria-hidden="true"><span class="octicon octicon-link"></span></a>fx
 </h5>
 
 <p>A function that affects the amount of rotation triggered by the mouse movements on the <strong>x axis</strong>. Default function as no effect on the rotation value.</p>
 
 <h5>
-<a id="activearea" class="anchor" href="#activearea" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>activeArea</em>
+<a id="activearea" class="anchor" href="#activearea" aria-hidden="true"><span class="octicon octicon-link"></span></a>activeArea
 </h5>
 
 <p>When available, restrict mouse movements tracking to this area: moving outside the area reset the <code>transformed layer</code> rotation.</p>
@@ -177,7 +176,7 @@ AvalonA('frame-3d', 'avalona-inner-frame', options).start();
 <p>Enable the <code>debug</code> option to display the area <em>( for development purpose only )</em>.</p>
 
 <h5>
-<a id="activeareawidth" class="anchor" href="#activeareawidth" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>activeArea.width</em>
+<a id="activeareawidth" class="anchor" href="#activeareawidth" aria-hidden="true"><span class="octicon octicon-link"></span></a>activeArea.width
 </h5>
 
 <ul>
@@ -190,7 +189,7 @@ AvalonA('frame-3d', 'avalona-inner-frame', options).start();
 </ul>
 
 <h5>
-<a id="activeareaheight" class="anchor" href="#activeareaheight" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>activeArea.height</em>
+<a id="activeareaheight" class="anchor" href="#activeareaheight" aria-hidden="true"><span class="octicon octicon-link"></span></a>activeArea.height
 </h5>
 
 <ul>
@@ -203,7 +202,7 @@ AvalonA('frame-3d', 'avalona-inner-frame', options).start();
 </ul>
 
 <h5>
-<a id="activeareaposition" class="anchor" href="#activeareaposition" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>[activeArea.position]</em>
+<a id="activeareaposition" class="anchor" href="#activeareaposition" aria-hidden="true"><span class="octicon octicon-link"></span></a>[activeArea.position]
 </h5>
 
 <p>Set the position of the area. Possible values:</p>
@@ -226,7 +225,7 @@ AvalonA('frame-3d', 'avalona-inner-frame', options).start();
 </ul>
 
 <h5>
-<a id="activeareaattachment" class="anchor" href="#activeareaattachment" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>[activeArea.attachment]</em>
+<a id="activeareaattachment" class="anchor" href="#activeareaattachment" aria-hidden="true"><span class="octicon octicon-link"></span></a>[activeArea.attachment]
 </h5>
 
 <p>Act like css <code>position: absolute|fixed</code>. Possible values:</p>
@@ -241,7 +240,7 @@ AvalonA('frame-3d', 'avalona-inner-frame', options).start();
 </ul>
 
 <h5>
-<a id="animation" class="anchor" href="#animation" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>animation</em>
+<a id="animation" class="anchor" href="#animation" aria-hidden="true"><span class="octicon octicon-link"></span></a>animation
 </h5>
 
 <p>Animates the <code>transformed layer</code> when mouse is outside the active area <em>– meaning the actual <code>activeArea</code> or simply the <code>3d Frame</code> when no <code>activeArea</code> is provided</em>. The animation plays as well when the mouse is iddle.</p>
@@ -263,7 +262,7 @@ AvalonA('frame-3d', 'avalona-inner-frame', options).start();
 <p>As the example shows, the <code>play()</code> method received as first argument the <code>transformed layer</code>, thus one can animate any attribute of this element <em>– not just the rotation</em>.</p>
 
 <h5>
-<a id="idletimeout" class="anchor" href="#idletimeout" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>idleTimeout</em>
+<a id="idletimeout" class="anchor" href="#idletimeout" aria-hidden="true"><span class="octicon octicon-link"></span></a>idleTimeout
 </h5>
 
 <p>The delay, in milliseconds, after which the user is considered idle when there is no mouse movements:</p>
@@ -280,7 +279,7 @@ AvalonA('frame-3d', 'avalona-inner-frame', options).start();
 <p>When the user is idle, the animation resumes <em>– if any –</em> and <code>endrotation</code> event is triggered.</p>
 
 <h5>
-<a id="debug" class="anchor" href="#debug" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>debug</em>
+<a id="debug" class="anchor" href="#debug" aria-hidden="true"><span class="octicon octicon-link"></span></a>debug
 </h5>
 
 <p>Enable debug logs and display when set to <code>true</code>.</p>
@@ -289,31 +288,31 @@ AvalonA('frame-3d', 'avalona-inner-frame', options).start();
 <a id="-methods" class="anchor" href="#-methods" aria-hidden="true"><span class="octicon octicon-link"></span></a><a name="methods"></a> Methods</h2>
 
 <h5>
-<a id="refresh" class="anchor" href="#refresh" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>refresh()</em>
+<a id="refresh" class="anchor" href="#refresh" aria-hidden="true"><span class="octicon octicon-link"></span></a>refresh()
 </h5>
 
 <p>Fetch <code>3d Frame</code> and <code>transformed layer</code> from the DOM and apply initial setup.</p>
 
 <h5>
-<a id="start" class="anchor" href="#start" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>start()</em>
+<a id="start" class="anchor" href="#start" aria-hidden="true"><span class="octicon octicon-link"></span></a>start()
 </h5>
 
-<p>Alias for <strong><em>refresh()</em></strong>.</p>
+<p>Alias for <strong>refresh()</strong>.</p>
 
 <h5>
-<a id="enable" class="anchor" href="#enable" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>enable()</em>
+<a id="enable" class="anchor" href="#enable" aria-hidden="true"><span class="octicon octicon-link"></span></a>enable()
 </h5>
 
-<p>Alias for <strong><em>refresh()</em></strong>.</p>
+<p>Alias for <strong>refresh()</strong>.</p>
 
 <h5>
-<a id="disable" class="anchor" href="#disable" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>disable()</em>
+<a id="disable" class="anchor" href="#disable" aria-hidden="true"><span class="octicon octicon-link"></span></a>disable()
 </h5>
 
 <p>Flatten <code>transformed layer</code>, remove mouse movement tracking, unable events and pause animation.</p>
 
 <h5>
-<a id="refreshtransform-target--selector-or-html-node-" class="anchor" href="#refreshtransform-target--selector-or-html-node-" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>refreshTransform( [target : selector OR html node] )</em>
+<a id="refreshtransform-target--selector-or-html-node-" class="anchor" href="#refreshtransform-target--selector-or-html-node-" aria-hidden="true"><span class="octicon octicon-link"></span></a>refreshTransform( [target : selector OR html node] )
 </h5>
 
 <p>Update <strong>z translation</strong> according to new values of <code>data-avalonA-transform</code>.
@@ -342,13 +341,13 @@ a.start();
 <p>Available events:</p>
 
 <h5>
-<a id="startrotation" class="anchor" href="#startrotation" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>startrotation</em>
+<a id="startrotation" class="anchor" href="#startrotation" aria-hidden="true"><span class="octicon octicon-link"></span></a>startrotation
 </h5>
 
 <p>Triggered when <code>transformed layer</code> rotation starts.</p>
 
 <h5>
-<a id="endrotation" class="anchor" href="#endrotation" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>endrotation</em>
+<a id="endrotation" class="anchor" href="#endrotation" aria-hidden="true"><span class="octicon octicon-link"></span></a>endrotation
 </h5>
 
 <p>Triggered when <code>transformed layer</code> rotation ends.</p>
@@ -367,7 +366,7 @@ a.start();
 <p>Adds a balancing movement between two rotation angles.</p>
 
 <h6>
-<a id="dependencies" class="anchor" href="#dependencies" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>Dependencies</em>
+<a id="dependencies" class="anchor" href="#dependencies" aria-hidden="true"><span class="octicon octicon-link"></span></a>Dependencies
 </h6>
 
 <ul>
@@ -378,7 +377,7 @@ a.start();
 <p>Note that the <strong>TweenMax</strong> module includes the <strong>TweenLite</strong> one <em>– see <a href="http://www.greensock.com">GSAP</a> documentation for details</em>.</p>
 
 <h6>
-<a id="examples" class="anchor" href="#examples" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>Examples</em>
+<a id="examples" class="anchor" href="#examples" aria-hidden="true"><span class="octicon octicon-link"></span></a>Examples
 </h6>
 
 <p><em>Example 1</em></p>
@@ -404,7 +403,7 @@ a.start();
 </code></pre>
 
 <h6>
-<a id="options" class="anchor" href="#options" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>Options</em>
+<a id="options" class="anchor" href="#options" aria-hidden="true"><span class="octicon octicon-link"></span></a>Options
 </h6>
 
 <ul>
@@ -422,7 +421,7 @@ a.start();
 <p>Rotates like a spotlight.</p>
 
 <h6>
-<a id="dependencies-1" class="anchor" href="#dependencies-1" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>Dependencies</em>
+<a id="dependencies-1" class="anchor" href="#dependencies-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Dependencies
 </h6>
 
 <ul>
@@ -433,7 +432,7 @@ a.start();
 <p>Note that the <strong>TweenMax</strong> module includes the <strong>TweenLite</strong> and <strong>BezierPlugin</strong> ones <em>– see <a href="http://www.greensock.com">GSAP</a> documentation for details</em>.</p>
 
 <h6>
-<a id="examples-1" class="anchor" href="#examples-1" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>Examples</em>
+<a id="examples-1" class="anchor" href="#examples-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Examples
 </h6>
 
 <p><em>Example 1</em></p>
@@ -451,7 +450,7 @@ a.start();
 </code></pre>
 
 <h6>
-<a id="options-1" class="anchor" href="#options-1" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>Options</em>
+<a id="options-1" class="anchor" href="#options-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Options
 </h6>
 
 <ul>
@@ -513,10 +512,6 @@ The same goes for <code>AvalonAnimation</code> plugin and <code>SpeedTester</cod
 
 <p>Check out this <a href="https://raw.github.com/janouma/AvalonA/master/dist/avalona-amd-test.zip">code sample</a> to understand how to use <strong>Avalon(A)</strong> and <strong>GreenSock</strong> with <strong>require.js</strong>.</p>
 
-<h1>
-<a id="-preview" class="anchor" href="#-preview" aria-hidden="true"><span class="octicon octicon-link"></span></a><a name="preview"></a> Preview</h1>
-
-<p><strong><a href="http://jsfiddle.net/K3kPx/5/show">see jsFiddle preview</a></strong></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/janouma/AvalonA">Avalon (A)</a> is maintained by <a href="https://github.com/janouma">janouma</a>.</span>
