--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
 
                     <div class="gravity">
-                        <div id="square" at="z:-189; rx:259; ry:302; rz:341"  >
+                        <div id="square" at="x:100; y:200; z:-189; rx:259; ry:302; rz:341"  >
                             <div class="gravity">
                                 <div id="inner-square" at="z:144; rx:230; ry:332; rz:359"  >
                                     <a at="z:122; rx:7; ry:211; rz:245" href="http://www.amazon.com"  >a.com</a>
