Added doc for "ready" and "refresh" events

--- a/README.html
+++ b/README.html
@@ -309,6 +309,22 @@ a.start();
 
 <p>Triggered when <code>transformed layer</code> rotation ends.</p>
 
+<h5 id="ready"><em>ready</em></h5>
+
+<p>Triggered ONLY ONCE by <code>start()</code>, <code>refresh()</code> or <code>enable()</code> BEFORE transformations gets actually applied.</p>
+
+<h5 id="refresh"><em>refresh</em></h5>
+
+<p>Triggered every time by <code>start()</code>, <code>refresh()</code> or <code>enable()</code> AFTER transformations has been applied.</p>
+
+<h5 id="start"><em>start</em></h5>
+
+<p>Alias for <code>refresh</code> event.</p>
+
+<h5 id="enable"><em>enable</em></h5>
+
+<p>Alias for <code>refresh</code> event.</p>
+
 <h1 id="anamepluginsaplugins"><a name="plugins"></a> Plugins</h1>
 
 <h2 id="anameavalonanimationaavalonanimation"><a name="avalonAnimation"></a> AvalonAnimation</h2>
