Added rotation to underlying black holes

--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
             <div class="t3d-layer" id="t3d-layer">
                 <div transform="rx:60">
                     <div class="gravity">
-                        <img class="black-hole" src="images/black-hole-sd.png"/>
-                        <img class="black-hole" transform="z:-40;rz:60;ry:6" src="images/black-hole-sd.png"/>
-                        <img class="black-hole" transform="z:-80;rz:90;rx:6" src="images/black-hole-sd.png"/>
-                        <img class="black-hole" transform="z:-120;rz:120;rx:6;ry:6" src="images/black-hole-sd.png"/>
-                        <img class="black-hole" transform="z:-160;rz:150;rx:-6;ry:-6" src="images/black-hole-sd.png"/>
+                        <img class="root black-hole" src="images/black-hole-sd.png"/>
+                        <div class="group-hole">
+                            <img class="black-hole" transform="z:-40;rz:60;ry:6" src="images/black-hole-sd.png"/>
+                            <img class="black-hole" transform="z:-80;rz:90;rx:6" src="images/black-hole-sd.png"/>
+                            <img class="black-hole" transform="z:-120;rz:120;rx:6;ry:6" src="images/black-hole-sd.png"/>
+                            <img class="black-hole" transform="z:-160;rz:150;rx:-6;ry:-6" src="images/black-hole-sd.png"/>
+                        </div>
                     </div>
                 </div>
             </div>
