--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
                             <img class="black-hole" transform="z:-120;rz:120;rx:6;ry:6" src="images/black-hole-sd.png"/>
                             <img class="black-hole" transform="z:-160;rz:150;rx:-6;ry:-6" src="images/black-hole-sd.png"/>
                         </div>
+                        <div class="portfolio-stand" transform="z: 30">
+                            <div class="portfolio">
+                                <div class="front-cover"><strong>Portfolio</strong></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
