Added portfolio pattern

--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
                         </div>
                         <div class="portfolio-stand" transform="z: 30">
                             <div class="portfolio">
-                                <div class="front-cover"><strong>Portfolio</strong></div>
+                                <div class="front-cover">
+                                    <div class="outer-cover">
+                                        <strong>Portfolio</strong>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
