--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div data-inner="aa3d" id="aa3d"  > <!-- 3d layer changing orientation -->
             <div class="gravity">
                 <div class="gravity">
-                    <div id="half-circle" at="z:-42; rx:104; ry:316; rz:35"  ></div>
+                    <div id="half-circle" at="oz: 0.33; z:-42; rx:104; ry:316; rz:35"  ></div>
                 </div>
                 <div id="rectangle" at="z:30; rx:194; ry:42; rz:288"  >
                     <div at="z:-61; rx:105; ry:232; rz:287"  >
@@ -40,9 +40,9 @@
                     </div>
 
                     <div class="gravity">
-                        <div id="square" at="x:100; y:200; z:-189; rx:259; ry:302; rz:341"  >
+                        <div id="square" at="ox: 0.15; x:100; y:200; z:-189; rx:259; ry:302; rz:341"  >
                             <div class="gravity">
-                                <div id="inner-square" at="z:144; rx:230; ry:332; rz:359"  >
+                                <div id="inner-square" at="oy: 0.75; z:144; rx:230; ry:332; rz:359"  >
                                     <a at="z:122; rx:7; ry:211; rz:245" href="http://www.amazon.com"  >a.com</a>
                                 </div>
                             </div>
@@ -51,7 +51,7 @@
 
 
                     <div class="gravity">
-                        <div id="circle" at="z:92; rx:261; ry:336; rz:282"  ></div>
+                        <div id="circle" at="oy: 0; z:92; rx:261; ry:336; rz:282"  ></div>
                         </div>
                     <div id="text">
                         Lorem ipsum dolor sit amet, consectetur <a href="http://www.amazon.com">adipiscing</a> elit. Ut aliquet <a href="#to">cursus</a> enim, et varius nibh dictum non. Ut tincidunt augue in urna vestibulum at venenatis metus cursus. Phasellus porta tortor sit amet elit elementum id faucibus purus facilisis. Mauris pharetra consequat mi, non mattis ligula feugiat eget. Vivamus consectetur orci ac mauris dignissim egestas. Aliquam erat volutpat. Sed imperdiet, lorem eget feugiat laoreet, enim diam pulvinar est, at sodales nulla metus at nisi. Etiam at hendrerit ligula. Sed eget est posuere tellus accumsan tempor sed rhoncus ipsum. Sed augue tortor, laoreet ac congue id, sagittis at nunc. Fusce a magna convallis lorem euismod porttitor sit amet vitae magna. Nulla lacus purus, volutpat sed rutrum non, tempor in tellus. Cras vel mi ac augue eleifend bibendum.
