--- a/index.html
+++ b/index.html
@@ -27,17 +27,20 @@
                     <div class="gravity">
                         <img class="root black-hole" src="images/black-hole-sd.png"/>
                         <div class="group-hole">
-                            <img class="black-hole" transform="z:-40;rz:60;ry:6" src="images/black-hole-sd.png"/>
-                            <img class="black-hole" transform="z:-80;rz:90;rx:6" src="images/black-hole-sd.png"/>
-                            <img class="black-hole" transform="z:-120;rz:120;rx:6;ry:6" src="images/black-hole-sd.png"/>
-                            <img class="black-hole" transform="z:-160;rz:150;rx:-6;ry:-6" src="images/black-hole-sd.png"/>
+                            <img class="black-hole" transform="z:-40; rz:60; ry:6" src="images/black-hole-sd.png"/>
+                            <img class="black-hole" transform="z:-80; rz:90; rx:6" src="images/black-hole-sd.png"/>
+                            <img class="black-hole" transform="z:-120; rz:120; rx:6; ry:6" src="images/black-hole-sd.png"/>
+                            <img class="black-hole" transform="z:-160; rz:150; rx:-6; ry:-6" src="images/black-hole-sd.png"/>
                         </div>
-                        <div class="portfolio-stand" transform="z: 30">
-                            <div class="portfolio">
-                                <div class="front-cover">
-                                    <div class="outer-cover">
-                                        <strong>Portfolio</strong>
-                                    </div>
+                        <div class="portfolio-stand" transform="z: 45">
+                            <div class="portfolio" transform="rx: -115; ry: 15">
+                                <div class="back-cover" transform="oy: 1; rx: -17.5; ry: 180">
+                                    <div class="inner-cover hide-back" transform="ry: 180"></div>
+                                    <div class="outer-cover hide-back"><strong>Portfolio</strong></div>
+                                </div>
+                                <div class="front-cover" transform="oy: 1; rx: -17.5">
+                                    <div class="inner-cover hide-back" transform="ry: 180"></div>
+                                    <div class="outer-cover hide-back"><strong>Portfolio</strong></div>
                                 </div>
                             </div>
                         </div>
@@ -47,7 +50,7 @@
         </section>
 
         <section class="main-content">
-<p><em>version: 1.0.0</em></p>
+<p><em>version: 1.1.0</em></p>
 
 <p><strong>Avalon(A)</strong> allows you to easily add 3d to a set of html elements to simulate a deepness effect. To make this 3d effect noticeable, all html elements pertaining to the <code>transformed layer</code> <em>(basically the root container to which the 3d effect get applied to)</em> - rotate on their x and y axis according to mouse movements.</p>
 
@@ -93,7 +96,7 @@
 
 <pre><code class="html">&lt;div id=&quot;frame-3d&quot;&gt; &lt;!-- 3d Frame --&gt;
     &lt;div id=&quot;avalona-inner-frame&quot;&gt; &lt;!-- transformed layer --&gt;
-        &lt;div id=&quot;half-circle&quot; data-avalonA-transform=&quot;z:-300&quot;&gt;&lt;/div&gt;
+        &lt;div id=&quot;half-circle&quot; data-avalonA-transform=&quot;ox: 0.5; oy: 0.35; z:-300&quot;&gt;&lt;/div&gt;
             &lt;div id=&quot;square&quot; data-avalonA-transform=&quot;z:75; rx:20.32; ry:5; rz:-10.2&quot;&gt;
                 &lt;div id=&quot;inner-square&quot; data-avalonA-transform=&quot;z:150&quot;&gt;&lt;/div&gt;
             &lt;/div&gt;
@@ -106,7 +109,7 @@
 
 <p><code>data-avalonA-transform</code> attribute value has the following structure:</p>
 
-<p><strong>z: z translation; rx: x rotation; ry: y rotation; rz: z rotation</strong></p>
+<p><strong>x: x translation; y: y translation; z: z translation; rx: x rotation; ry: y rotation; rz: z rotation; ox: x origin transform; oy: y origin transform; oz: z origin transform</strong></p>
 
 <p>All properties are optional.</p>
 
@@ -302,6 +305,9 @@ all elements are also referenced under <code>all</code>, including those not hav
 <li><code>rx</code> – get/set the rotateX style of the node</li>
 <li><code>ry</code> – get/set the rotateY style of the node</li>
 <li><code>rz</code> – get/set the rotateZ style of the node</li>
+<li><code>ox</code> – get/set the x origin transform style of the node</li>
+<li><code>oy</code> – get/set the y origin transform style of the node</li>
+<li><code>oz</code> – get/set the z origin transform style of the node</li>
 </ul>
 
 <p>The node style get updated – <em>according to the x, y, z, &#8230; getter/setter</em> – only after calling either
