hidding portfolio until AvalonA is enabled

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <img class="black-hole" transform="z:-120; rz:120; rx:6; ry:6" src="images/black-hole-sd.png"/>
                             <img class="black-hole" transform="z:-160; rz:150; rx:-6; ry:-6" src="images/black-hole-sd.png"/>
                         </div>
-                        <div class="portfolio-stand" transform="z: 45">
+                        <div class="portfolio-stand hidden" transform="z: 45">
                             <div class="portfolio" transform="rx: -115; ry: 15">
                                 <div class="back-cover" transform="oy: 1; rx: -17.5; ry: 180">
                                     <div class="inner-cover hide-back" transform="ry: 180"></div>
