improved stylesheet structure

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
                                     <div class="inner-cover hide-back" transform="ry: 180"></div>
                                     <div class="outer-cover hide-back"><strong>Portfolio</strong></div>
                                 </div>
+
+                                <div class="sheet">
+                                    <div class="back page hide-back" transform="ry: 180">Back</div>
+                                    <div class="front page hide-back">Front</div>
+                                </div>
+
                                 <div class="front-cover" transform="oy: 1; rx: -17.5">
                                     <div class="inner-cover hide-back" transform="ry: 180"></div>
                                     <div class="outer-cover hide-back"><strong>Portfolio</strong></div>
