--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
                             <img class="black-hole" transform="z:-120; rz:120; rx:6; ry:6" src="images/black-hole-sd.png"/>
                             <img class="black-hole" transform="z:-160; rz:150; rx:-6; ry:-6" src="images/black-hole-sd.png"/>
                         </div>
-                        <div class="portfolio-stand hidden" transform="z: 45">
-                            <div class="portfolio" transform="rx: -115; ry: 15">
+                        <div class="portfolio-stand hidden" transform="z: 5">
+                            <div class="portfolio" transform="ox: 1; oy: 1; rx: -115; ry: 15">
                                 <div class="back-cover" transform="oy: 1; rx: -17.5; ry: 180">
                                     <div class="inner-cover hide-back" transform="ry: 180"></div>
                                     <div class="outer-cover hide-back"><strong>Portfolio</strong></div>
                                 </div>
 
-                                <div class="sheet">
+                                <div class="sheet" transform="ox: 1; rz: 15; ry: 7.5; y: -30">
                                     <div class="back page hide-back" transform="ry: 180">Back</div>
                                     <div class="front page hide-back">Front</div>
                                 </div>
@@ -56,7 +56,7 @@
         </section>
 
         <section class="main-content">
-<p><em>version: 1.1.0</em></p>
+<p><em>version: 1.1.1</em></p>
 
 <p><strong>Avalon(A)</strong> allows you to easily add 3d to a set of html elements to simulate a deepness effect. To make this 3d effect noticeable, all html elements pertaining to the <code>transformed layer</code> <em>(basically the root container to which the 3d effect get applied to)</em> - rotate on their x and y axis according to mouse movements.</p>
 
