Found the right placeholder for page backface

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
                                 <div class="gravity">
                                     <div class="sheet" transform="ox: 1; rz: 15; y: -30;">
-                                        <div class="back page hide-back" transform="ry: 180"><strong>The search</strong></div>
+                                        <div class="back page hide-back" transform="ry: 180; rz:180"><strong>The search</strong></div>
                                         <img class="front page hide-back" src="https://c1.staticflickr.com/3/2881/9841067843_776392d572_z.jpg"/>
                                     </div>
                                 </div>
