--- a/index.html
+++ b/index.html
@@ -26,29 +26,38 @@
                 <div transform="rx:60">
                     <div class="gravity">
                         <img class="root black-hole" src="images/black-hole-sd.png"/>
-                        <div class="group-hole">
+                        <div class="group-hole absolute">
                             <img class="black-hole" transform="z:-40; rz:60; ry:6" src="images/black-hole-sd.png"/>
-                            <img class="black-hole" transform="z:-80; rz:90; rx:6" src="images/black-hole-sd.png"/>
-                            <img class="black-hole" transform="z:-120; rz:120; rx:6; ry:6" src="images/black-hole-sd.png"/>
-                            <img class="black-hole" transform="z:-160; rz:150; rx:-6; ry:-6" src="images/black-hole-sd.png"/>
+                            <img class="black-hole absolute" transform="z:-80; rz:90; rx:6" src="images/black-hole-sd.png"/>
+                            <img class="black-hole absolute" transform="z:-120; rz:120; rx:6; ry:6" src="images/black-hole-sd.png"/>
+                            <img class="black-hole absolute" transform="z:-160; rz:150; rx:-6; ry:-6" src="images/black-hole-sd.png"/>
                         </div>
-                        <div class="portfolio-stand hidden" transform="z: 5">
+                        <div class="portfolio-stand absolute expand hidden" transform="z: 5">
                             <div class="portfolio" transform="ox: 1; oy: 1; rx: -115; ry: 15">
-                                <div class="back-cover" transform="oy: 1; rx: -17.5; ry: 180">
-                                    <div class="inner-cover hide-back" transform="ry: 180"></div>
-                                    <div class="outer-cover hide-back"><strong>Portfolio</strong></div>
+                                <div class="back-cover absolute expand" transform="oy: 1; rx: -17.5; ry: 180">
+                                    <div class="inner-cover absolute expand hide-back" transform="ry: 180"></div>
+                                    <div class="outer-cover expand hide-back"><strong>Portfolio</strong></div>
                                 </div>
 
-                                <div class="gravity">
-                                    <div class="sheet" transform="ox: 1; rz: 15; y: -30;">
-                                        <div class="back page hide-back" transform="ry: 180; rz:180"><strong>The search</strong></div>
+                                <div class="sheet absolute" transform="rz: 15; y: -30">
+                                    <div class="gravity expand">
+                                        <div class="back page absolute expand hide-back" transform="ry: 180; rz:180"><strong>The search</strong></div>
                                         <img class="front page hide-back" src="https://c1.staticflickr.com/3/2881/9841067843_776392d572_z.jpg"/>
                                     </div>
                                 </div>
 
-                                <div class="front-cover" transform="oy: 1; rx: -17.5">
-                                    <div class="inner-cover hide-back" transform="ry: 180"></div>
-                                    <div class="outer-cover hide-back"><strong>Portfolio</strong></div>
+                                <div class="absolute expand" transform="rx: 90">
+                                    <div class="gravity expand">
+                                        <div class="sheet absolute transluent" transform="z: 230; rx: -30; ry: -20">
+                                            <div class="back page absolute expand hide-back" transform="ry: 180"><strong>Goat face</strong></div>
+                                            <img class="front page hide-back" src="https://c2.staticflickr.com/4/3103/2639549349_ee6952a23f.jpg"/>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="front-cover expand" transform="oy: 1; rx: -17.5">
+                                    <div class="inner-cover absolute expand hide-back" transform="ry: 180"></div>
+                                    <div class="outer-cover expand hide-back"><strong>Portfolio</strong></div>
                                 </div>
                             </div>
                         </div>
