--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                 <div class="sheet absolute" transform="rz: 15; y: -30">
                                     <div class="gravity expand">
                                         <div class="back page absolute expand hide-back" transform="ry: 180; rz:180"><strong>The search</strong></div>
-                                        <img class="front page hide-back" src="https://c1.staticflickr.com/3/2881/9841067843_776392d572_z.jpg"/>
+                                        <img class="front page hide-back" src="https://c3.staticflickr.com/3/2856/9840909545_4b7a28c426_c.jpg"/>
                                     </div>
                                 </div>
 
@@ -53,6 +53,11 @@
                                             <img class="front page hide-back" src="https://c2.staticflickr.com/4/3103/2639549349_ee6952a23f.jpg"/>
                                         </div>
                                     </div>
+                                </div>
+
+                                <div class="sheet absolute transluent" transform="z: -225; ry: 180; rz: -30; rx: -10">
+                                    <div class="back page absolute expand hide-back" transform="ry: 180"><strong>Greeks</strong></div>
+                                    <img class="front page hide-back" src="https://c3.staticflickr.com/3/2827/9840901813_80cdccff89_c.jpg"/>
                                 </div>
 
                                 <div class="front-cover expand" transform="oy: 1; rx: -17.5">
